# URL-Cutter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  lite_upgrade.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
README/: README-UC-CN.md  README-UC-DE.md  README-UC-EN.md  README-UC-RU.md  README-UC-VN.md
alembic_migrations/: env.py
alembic_migrations/versions/: 469139943c7f_create_links_table.py  bb678cb2bb05_baseline_empty.py  c81e7e299463_create_links_table.py
hooks/: cleanup_meipass.py
scripts/: smoke_shortening.py
tests/: conftest.py  test_circuit.py  test_db_models.py  test_engine.py  test_fingerprint.py  test_handlers.py  test_handlers_unit.py  test_history_handlers.py  test_history_service.py  test_history_sql.py  test_internet_ok.py  test_internet_ok_logging.py  test_main_smoke.py  test_normalize_url.py  test_normalize_url_extra.py  test_paths.py  test_setup_logging.py  test_shorten_success.py  test_shorten_timeout.py  test_shorten_tinyurl.py  test_shortener.py  test_smoke.py  test_ui_builders_extra.py  test_ui_builders_smoke.py  test_view_basic.py
urlcutter/: __init__.py  handlers.py  logging_utils.py  normalization.py  protection.py  shorteners.py  ui_builders.py
urlcutter/db/: __init__.py  engine.py  migrate.py  paths.py
urlcutter/db/models/: __init__.py  link.py
urlcutter/db/repo/: __init__.py  errors.py  history_service.py  history_sql.py  schemas.py
urlcutter/patches/: fix_alembic_version.py
urlcutter/specs/: history_contracts.md
(+3 files in other folders)
